Bug 425935 - No way of changing smallest cash/money unit size
Summary: No way of changing smallest cash/money unit size
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-29 09:50 UTC by Ian Neal
Modified: 2020-09-13 12:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2020-08-29 09:50:14 UTC
SUMMARY
When creating a new currency there is no way to change the smallest cash unit or smallest money unit sizes. Not sure how those sizes relate to the precision field that can be changed.

STEPS TO REPRODUCE
1. Create a new currency in the currencies dialog
2. Select Edit of new currency
3. Smallest cash/money unit size shows at 0.01

OBSERVED RESULT
1. Fields are read only and there seems to be no way to edit them
2. Precision field is set to 4 but seems to bear no relation ship to smallest cash/money unit size.

EXPECTED RESULT
1. Smallest cash/money unit size can be updated.
2. Perhaps the smallest cash unit should be linked to the precision field?

I am presuming the smallest money unit is the smallest coin/note available in circulation, whereas the smallest cash unit is to what level currency calculations are done at.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora 31
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.13.2

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2020-09-13 12:08:45 UTC
Git commit 2afa09b0691f4eb79a2f22c5a2ac4adf8b50c7ec by Thomas Baumgart.
Committed on 13/09/2020 at 12:07.
Pushed by tbaumgart into branch 'master'.

Provide detailed creation of currencies

The current implementation does not allow to specify all attributes for
currencies but rather uses default values which cannot be changed
afterwards.

This change adds functionality to set all relevant attributes during
creation and also provides a feature to change those which can be
changed after creation of the currency.

M  +60   -31   kmymoney/dialogs/kcurrencyeditdlg.cpp
M  +1    -1    kmymoney/dialogs/kcurrencyeditdlg.h
M  +23   -15   kmymoney/dialogs/kcurrencyeditdlg.ui
M  +101  -16   kmymoney/dialogs/kcurrencyeditordlg.cpp
M  +9    -5    kmymoney/dialogs/kcurrencyeditordlg.h
M  +104  -29   kmymoney/dialogs/kcurrencyeditordlg.ui

https://invent.kde.org/office/kmymoney/commit/2afa09b0691f4eb79a2f22c5a2ac4adf8b50c7ec
Comment 2 Thomas Baumgart 2020-09-13 12:29:34 UTC
Git commit f68278ea401af18af92cb708c5899dfefa07ae52 by Thomas Baumgart.
Committed on 13/09/2020 at 12:28.
Pushed by tbaumgart into branch '5.1'.

Provide detailed creation of currencies

The current implementation does not allow to specify all attributes for
currencies but rather uses default values which cannot be changed
afterwards.

This change adds functionality to set all relevant attributes during
creation and also provides a feature to change those which can be
changed after creation of the currency.
FIXED-IN: 5.1.1
GUI:

(cherry picked from commit 2afa09b0691f4eb79a2f22c5a2ac4adf8b50c7ec)

M  +59   -30   kmymoney/dialogs/kcurrencyeditdlg.cpp
M  +1    -1    kmymoney/dialogs/kcurrencyeditdlg.h
M  +23   -15   kmymoney/dialogs/kcurrencyeditdlg.ui
M  +101  -16   kmymoney/dialogs/kcurrencyeditordlg.cpp
M  +9    -5    kmymoney/dialogs/kcurrencyeditordlg.h
M  +104  -29   kmymoney/dialogs/kcurrencyeditordlg.ui

https://invent.kde.org/office/kmymoney/commit/f68278ea401af18af92cb708c5899dfefa07ae52